# SiLR-Agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: finance_system_prompt.txt
docs/: cluster-grpo-design.md
domains/: __init__.py
domains/cluster/: README.md  __init__.py  checkers.py  config.py  failsafe.py  manager.py  observation.py  tools.py
domains/cluster_v2023/: README.md  __init__.py  checkers.py  config.py  expert.py  manager.py  observation.py  tools.py
domains/finance/: README.md  __init__.py  checkers.py  config.py  manager.py  observation.py  scenarios.py  tools.py
domains/grid/: README.md  __init__.py  config.py  failsafe.py  observation.py  simulator.py
domains/network/: README.md  __init__.py  checkers.py  config.py  manager.py  observation.py  (+3 more)
examples/: cluster_scheduling.py  finance_compliance.py  grid_recovery.py  network_cascading.py  network_routing.py
scripts/: bootstrap_swe_envs.bat  build_cluster_v2023_comparison.py  build_cluster_v2023_scenarios.py  clean_sft_data.py  cluster_v2023_reward.py  collect_cluster_v2023_sft.py  collect_finance_sft.py  collect_sft_data.py  collect_swe_sft.py  enrich_cluster_v2023_sft.py  eval_cluster_v2023.py  eval_finance.py  eval_sft.py  eval_swe_inference.py  eval_swe_official.py  fix_patch_escapes.py  grpo_sanity_check.py  run_swe_grpo.bat  run_swe_inference.bat  run_swe_sft.bat  train_grpo.py  train_grpo_cluster_v2023.py  train_sft.py  train_swe_grpo.py  train_swe_sft.py
silr/: __init__.py  exceptions.py  types.py
tests/: conftest.py  test_action_parser.py  test_cluster_checkers.py  test_cluster_integration.py  test_cluster_manager.py  test_cluster_scenarios.py  test_cluster_tools.py  test_coordinator.py  test_core_interfaces.py  test_grpo_trainer.py  test_multi_trajectory.py  test_multi_types.py  test_network_cascading.py  test_network_domain.py  test_react_loop.py  test_reward.py  test_trajectory.py  test_verifier_network.py
(+161 files in other folders)
